[tool.poetry]
name = "delphy"
version = "0.1.0"
description = ""
authors = ["Leonhard Zacharias <leonhard.zacharias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chromadb = "^0.4.15"
pydantic = "^2.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
